 -- chan_zap
    -- seg fault fix
 -- rtp
    -- seg fault fix
 -- chan_sip
    -- fix to prevent seg fault when attempting a transfer
    -- fix bug with supervised transfers
 -- chan_h323
    -- fix compilation problem
 -- Numerous other minor bug fixes
Asterisk 1.0.2
 -- Major bugfix release
Asterisk 1.0.1
 -- Added AGI over TCP support
 -- Add ability to purge callers from queue if no agents are logged in
 -- Fix inband PRI indication detection
 -- Fix for MGCP - always request digits if no RTP stream
 -- Fixed seg fault for ast_control_streamfile
 -- Make pick-up extension configurable via features.conf 
 -- Numerous other bug fixes
Asterisk 1.0.0
 -- Use Q.931 standard cause codes for asterisk cause codes
 -- Bug fixes from the bug tracker
Asterisk 1.0-RC2 
 -- Additional CDR backends
 -- Allow muted to reconnect
 -- Call parking improvements (including SIP parking support)
 -- Added licensed hold music from FreePlayMusic
 -- GR-303 and Zap improvements
 -- More bug fixes from the bug tracker
 -- Improved FreeBSD/OpenBSD/MacOS X support
Asterisk 1.0-RC1
 -- Innumerable bug fixes and features from the bug tracker
 -- Added Open Settlement Protocol (OSP) support
 -- Added Non-facility Associated Signalling (NFAS) Support
 -- Added alarm Monitoring support
 -- Added new MeetMe options
 -- Added GR-303 Support
 -- Added trunk groups
 -- ADPCM Standardization
 -- Numerous bug fixes
 -- Add IAX2 Firmware Support
 -- Add G.726 support
 -- Add ices/icecast support
 -- Numerous bug fixes
Asterisk 0.7.2
 -- Countless small bug fixes from bug tracker
 -- DSP Fixes
 -- Fix unloading of Zaptel
 -- Pass Caller*ID/ANI properly on call forwarding
 -- Add indication for Italy
Asterisk 0.7.1
 -- Fixed timed include context's and GotoIfTime
 -- Fixed chan_h323 it now gets remote ip properly instead of 127.0.0.1
Asterisk 0.7.0
 -- Removed MP3 format and codec
 -- Can now load and unload SIP,IAX,IAX2,H323 channels without core