@@ -7,6 +7,8 @@
     -- fix bug with supervised transfers
  -- chan_h323
     -- fix compilation problem
+ -- cdr_pgsql
+    -- fix memory leak when reading config
  -- Numerous other minor bug fixes
 Asterisk 1.0.2
  -- Major bugfix release
